# minesweeper-web

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  style.css
src/: board.rs  main.rs
src/board/: bomb_display.rs  cell.rs  options_menu.rs  reset_button.rs  timer_display.rs
