[package]
name = "minesweeper-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = {version="0.9.0-beta.1", features = ["suspense"]}
gloo-timers = {version="0.2.6",  features = ["futures"]}